fixed a claims map wrapping display bug for Windows Chrome

--- a/Blades-in-the-Dark/blades.css
+++ b/Blades-in-the-Dark/blades.css
@@ -263,7 +263,7 @@ input[type=checkbox].sheet-turf:checked + span {
   position: relative;
   top: 27px;
   margin-top: -23px;
-  z-index: 1;
+  z-index: 3;
 }
 
 /* Character Tab */
@@ -465,7 +465,9 @@ input.sheet-crew-lair {
 
 .sheet-map-row-claims {
     margin-left: 51px;
-    width: 740px;
+    width: 742px;
+    min-width: 742px;
+    max-width: 742px;
 }
 
 .sheet-map-row-claims textarea {
@@ -489,7 +491,9 @@ input.sheet-crew-lair {
 .sheet-connector-row {
   margin-bottom: -20px;
   margin-left: 48px;
-  width: 760px;
+  width: 762px;
+  min-width: 762px;
+  max-width: 762px;
 }
 
 
